# fuggers-py

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASING.md  pyproject.toml
.agents/skills/add-feature/: SKILL.md
.codex/: config.toml  hooks.json
.codex/agents/: fi_api_reviewer.toml  fi_diff_reviewer.toml  fi_finance_reviewer.toml  public_api_reviewer.toml
.github/workflows/: ci.yml  release.yml
artifacts/legacy_examples/: 01_cash_bond_and_curve_workflow.ipynb  02_financed_tips_multi_curve_workflow.ipynb  03_credit_basis_cross_market_and_optionality.ipynb  04_portfolio_etf_and_engine_pipeline.ipynb
artifacts/reviews/: public_api_refactor.public_api_reviewer.md
docs/: MODULE_REFERENCE.md  SRC_STRUCTURE.md  STATUS.md  conf.py  conventions.md  docstring_standard.md  index.md  validation_strategy.md
docs/_static/: custom.css
docs/api/: adapters.md  bonds.md  calc.md  core.md  credit.md  curves.md  funding.md  index.md  inflation.md  market.md  market_curves.md  math.md  measures.md  portfolio.md  pricers.md  products.md  rates.md  reference.md  vol_surfaces.md
docs/dev/: internal_modules.md
examples/: 01_cash_bond_and_curve_workflow.ipynb  01_public_curves_and_surfaces.ipynb  01_treasury_curve_fit.ipynb  02_financed_tips_multi_curve_workflow.ipynb  03_credit_basis_cross_market_and_optionality.ipynb  04_portfolio_etf_and_engine_pipeline.ipynb  05_fitted_nominal_real_breakeven_minimal.ipynb  README.md
examples/synthetic_data/: market_quotes.csv  positions.csv  realized_cpi.csv  reference_instruments.csv
examples/synthetic_data/bonds/: call_schedule.csv  cash_bond_market_levels.csv  instruments.csv  sinking_schedule.csv
examples/synthetic_data/credit/: cds_families.csv  cds_par_spreads.csv
examples/synthetic_data/curves/: benchmarks.csv  cash_breakeven_markers.csv  inflation_swap_curve.csv  nominal_government_curve.csv  ois_discount_curve.csv  real_rate_curve.csv  repo_funding_curve.csv
examples/synthetic_data/fx/: cross_currency_basis.csv  cross_currency_basis_instruments.csv
examples/synthetic_data/rates/: rates_future_chain.csv  rates_futures.csv  rates_futures_basket.csv  rates_option_smile.csv  rates_options.csv
refactor/: PUBLIC_API_CURRENT_INVENTORY.json  PUBLIC_API_DEPENDENCY_MANIFEST.json  PUBLIC_API_EXPORT_MANIFEST.json  PUBLIC_API_LEGACY_DENYLIST.json  PUBLIC_API_MIGRATION_LEDGER.json  PUBLIC_API_STRUCTURE_MANIFEST.json
specs/: public_api_surface.json
src/fuggers_py/: __init__.py  _inflation_types.py
src/fuggers_py/_adapters/: __init__.py  file.py  sqlite_storage.py
src/fuggers_py/_calc/: __init__.py  builder.py  calc_graph.py  config.py  errors.py  market_data_listener.py  output.py  pricing_router.py  pricing_specs.py  reactive.py
src/fuggers_py/_core/: __init__.py  calendar_id.py  calendars.py  compounding.py  daycounts.py  errors.py  ex_dividend.py  ids.py  option_type.py  pay_receive.py  quote_support.py  reference.py  settlement_rules.py  stub_rules.py  tenor.py  traits.py  types.py  yield_calculation_rules.py  yield_convention.py
src/fuggers_py/_market/: __init__.py  _shared.py  curve_support.py  snapshot.py  sources.py  state.py
src/fuggers_py/_math/: __init__.py  errors.py  numerical.py  utils.py
src/fuggers_py/_measures/: __init__.py  errors.py  functions.py
src/fuggers_py/_pricers/: __init__.py
src/fuggers_py/_products/: __init__.py
src/fuggers_py/_reference/: __init__.py  base.py  reference_data.py
src/fuggers_py/_runtime/: __init__.py  _shared.py  builder.py  calc_graph.py  errors.py  (+11 more)
tests/: README_add_feature_workflow.md  __init__.py  conftest.py
tests/contracts/: __init__.py
tests/helpers/: _add_feature_validator.py  _engine_scenarios.py  _fitted_bond_helpers.py  _paths.py  _portfolio_helpers.py  _public_curve_helpers.py  _rates_helpers.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tools/: codex_hooks.py  repo_hooks.py  run_release_ruff.py  source_coverage.py  update_public_api_surface.py  validate_add_feature.py  validate_api_cleanliness.py  validate_docs_coverage.py  validate_public_api_refactor.py  validate_public_api_surface.py
tools/packaging/: smoke_imports.py  smoke_optional_with_engine.py  smoke_optional_without_engine.py
typecheck/: public_api.py
(+1044 files in other folders)
